Update on stripe corrections, complete paypal, and started openpayd settings
